<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_first_window">LyricholicApp</string>
    <string name="button_text">Search Lyrics</string>
	<string name="enter_text">Insert lyrics</string>
   
	
    <string name="track_name">TEST - This is another activity starting by main activity</string>
    
    <string name="artist">TEST - This is another activity starting by main activity</string>
    <string name="album">TEST - This is another activity starting by main activity</string>
    <string name="genre">TEST - This is another activity starting by main activity</string>
    <string name="lyrics">TEST - This is another activity starting by main activity</string>
    
</resources>
