<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_welcome_2"
    tools:context="com.example.test.MainActivity" >
    
      <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="#006666"
        android:gravity="center"
        android:text="@string/title_first_window" />

      <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_below="@+id/textViewTitle"
        
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/button_text" />
      
       <EditText
        android:id="@+id/editTextLyrics"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/searchButton"
        android:layout_below="@+id/searchButton"
        android:ems="10"
        android:textColor="#000"
        android:background="#FFF"
        android:singleLine="false"
        android:maxLines="4"
        android:scrollbarStyle="insideInset"
		android:scrollbars="vertical" 
		android:overScrollMode="always"
        android:text="@string/enter_text" android:inputType="textMultiLine" /> 

   
</RelativeLayout>
